--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "print-js": "^1.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-d3-tree": "^3.3.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-to-print": "^2.14.7",
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
